@@ -2,6 +2,7 @@ Version 1.1.0
 - Added clash score
 - Added code to support regular PDB files along PDB-redo
 - Added much more ligands, covers over 95% of ligands in PDB
+- Changed default min-hsp-identity to 25%
 
 Version 1.0.1
 - Added 3d-beacon info
